Fixing edge case where user avatar gets stretched

--- a/stable/styles/chinese/black-highlighter_ch.css
+++ b/stable/styles/chinese/black-highlighter_ch.css
@@ -662,6 +662,7 @@ span > a[href*="user:info"] {
 
 .printuser img.small {
 	margin-right: 0.0625rem;
+	min-width: auto !important; /* Fixes issue where avatar gets stretched in specific situations */
 }
 
 #main-content {
@@ -3713,6 +3714,7 @@ span > a[href*="user:info"] {
 
 .printuser img.small {
 	margin-right: 0.0625rem;
+	min-width: auto !important; /* Fixes issue where avatar gets stretched in specific situations */
 }
 
 #main-content {
