--- a/styles/chinese/main_ch.css
+++ b/styles/chinese/main_ch.css
@@ -159,6 +159,7 @@ span > a[href*="user:info"] {
 
 .printuser img.small {
 	margin-right: 0.0625rem;
+	min-width: auto !important; /* Fixes issue where avatar gets stretched in specific situations */
 }
 
 #main-content {
